# mediflow

./: .gitignore  CLAUDE.md  PLAN.md  README.md  RULES.md  benchmark.db  benchmark_results.html  benchmark_results_v1.html  env.example  pyproject.toml  requirements.txt
.claude/: review_log.md  settings.local.json
.claude/agents/: code-reviewer.md
data/: benchmark.db  split_cache.json  translations.db
data/prescripts/: Prescript_035_HE.txt  Prescript_036_HE.txt  Prescript_037_HE.txt  Prescript_038_HE.txt  Prescript_039_HE.txt  Prescript_040_HE.txt  Prescript_041_HE.txt  Prescript_042_HE.txt  Prescript_043_HE.txt  Prescript_044_HE.txt  Prescript_045_HE.txt  Prescript_046_HE.txt  Prescript_047_HE.txt  Prescript_048_HE.txt  Prescript_049_HE.txt  Prescript_050_HE.txt  Prescript_051_HE.txt  Prescript_052_HE.txt  Prescript_053_HE.txt  Prescript_054_HE.txt  Prescript_055_HE.txt  Prescript_056_HE.txt  Prescript_057_HE.txt  Prescript_058_HE.txt  Prescript_059_HE.txt  Prescript_060_HE.txt  Prescript_061_HE.txt  Prescript_062_HE.txt  Prescript_063_HE.txt  (+4 more)
planning/: deep_project_interview.md  deep_project_session.json  project-manifest.md  requirements.md
scripts/: audit_results.py  build_split_cache.py  diagnose_timeout.py  extract_medical_pdfs.py  run.py  run_benchmark.py  run_test.py  test_connection.py  test_evaluator.py  test_visualize.py
tests/: conftest.py  test_data_structures.py  test_db_sections.py  test_evaluation_fixes.py  test_judge_section.py  test_pipeline_smoke.py  test_run_section_tasks.py  test_splitter.py  test_thread_safety.py  test_translator.py
(+264 files in other folders)
